--- a/src/styles/CreateBookModal.style.scss
+++ b/src/styles/CreateBookModal.style.scss
@@ -2,16 +2,21 @@
 
 .book-modal {
     display: flex;
+    box-shadow: 6px 3px 3px grey;
     flex-direction: column;
     position: absolute;
     width: 400px;
-    height: 400px;
-    border: 1px solid grey;
+    height: auto;
     background-color: white;
+    border: 0.5px solid $border;
+
+    
 
     &__header {
         padding: 0 0.5rem;
-        background-color: $main-color;
+        color: white;
+        background-color: $main;
+        text-align: center;
     }
 
     &__body {
@@ -23,7 +28,7 @@
         padding: 1rem;
         align-items: end;
         justify-content: end;
-        border-top: 1px solid grey;
+        border-top: 1px solid $border;
 
         & button:first-child {
             margin-right: 0.5rem;
