--- a/src/styles/color.scss
+++ b/src/styles/color.scss
@@ -1,2 +1,5 @@
-$main-color: #F38428;
-$secondary-color: #282F6C;
+$main: #F38428;
+$secondary: #282F6C;
+$border: gainsboro;
+$error: #d96565;
+$success: #26b02a
