--- a/src/styles/Button.style.scss
+++ b/src/styles/Button.style.scss
@@ -7,25 +7,39 @@
     border-radius: 10px;
 
     &--primary{
-        background-color: $main-color;
+        background-color: $main;
 
         &:hover {
-            color: $main-color;
+            color: $main;
             border: 1px solid;
             background-color: white;
         }
     }
 
     &--secondary {
-        background-color: $secondary-color;
+        background-color: $secondary;
         
         &:hover {
             border: 1px solid;
-            color: $secondary-color;
+            color: $secondary;
             background-color: white;
         }
     }
 
+    &--error {
+        background-color: $error;
+        
+        &:hover {
+            border: 1px solid;
+            color: $error;
+            background-color: white;
+        }
+    }
 
-
+    &:disabled {
+        cursor:not-allowed;
+        color: grey;
+        border-color: 1px solid;
+        background-color: white;
+    }
 }
